force-app/main/default/objects/Contract/fields/Additional_CC_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC_s_Email__c</fullName>
    <inlineHelpText>In case of multiple Id&apos;s use &apos;;&apos; as separator</inlineHelpText>
    <label>Additional CC&apos;s Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>