force-app/main/default/objects/Contract/fields/Advance_along_with_PO_SOF__c.field-meta.xml
<CustomField>
    <fullName>Advance_along_with_PO_SOF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advance along with PO / SOF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>