force-app/main/default/objects/Contract/fields/Advance_Amount_Due_SOE__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_Due_SOE__c</fullName>
    <formula>Annual_One_Time_Charge_SOE__c * Advance_along_with_PO_SOF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>