force-app/main/default/objects/Contract/fields/Amount_Due_Installation_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_Installation_Commissioning__c</fullName>
    <formula>Installation_Commissioning__c * Annual_One_Time_Charge_SOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due(Installation &amp; Commissioning)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>