force-app/main/default/objects/Contract/fields/Amount_Due_Intimation_of_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_Intimation_of_Dispatch__c</fullName>
    <formula>Intimation_of_Readiness_of_Dispatch__c * Annual_One_Time_Charge_SOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Intimation of readiness of dispatch</inlineHelpText>
    <label>Amount Due (Intimation of Dispatch)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>