force-app/main/default/objects/Contract/fields/Amount_Due_Post_UAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_Post_UAT__c</fullName>
    <formula>Post_UAT__c * Annual_One_Time_Charge_SOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due (Post UAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>