force-app/main/default/objects/Contract/fields/Annual_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Grand_Total__c</fullName>
    <label>Annual Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>