force-app/main/default/objects/Contract/fields/Annual_One_Time_Charge_SOE__c.field-meta.xml
<CustomField>
    <fullName>Annual_One_Time_Charge_SOE__c</fullName>
    <label>Annual One Time Charge (SOE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>