force-app/main/default/objects/Contract/fields/bDel_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>bDel_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2bDel_Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>