force-app/main/default/objects/Contract/fields/bDel_Contract__c.field-meta.xml
<CustomField>
    <fullName>bDel_Contract__c</fullName>
    <label>2bDel_Contract#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>