force-app/main/default/objects/Contract/fields/Bill_Dates_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Bill_Dates_Arrived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicating at least 1 bundled subscription have Bill Start Date</description>
    <label>Bill Dates Arrived?</label>
    <type>Checkbox</type>
</CustomField>