force-app/main/default/objects/Contract/fields/Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency__c</fullName>
    <label>Billing Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
                <default>true</default>
                <label>INR</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
                <label>EURO</label>
            </value>
            <value>
                <fullName>GBP</fullName>
                <label>POUND</label>
            </value>
            <value>
                <fullName>JPY</fullName>
                <label>YEN</label>
            </value>
            <value>
                <fullName>RMB</fullName>
                <label>YUAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>