force-app/main/default/objects/Contract/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>GG: Marked it as 2bDEL as this seems to be not in use</description>
    <label>2bDel_Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>