force-app/main/default/objects/Contract/fields/Billing_Frequency_formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_formula__c</fullName>
    <description>Formula derived from the Billing Frequency</description>
    <formula>CASE(TEXT(RC_Advance_Payment_Term_SOS__c), 
 &quot;Monthly in Advance&quot;,&quot;1&quot;,
 &quot;Monthly in Arrears&quot;,&quot;1&quot;,
 &quot;Quarterly in Advance&quot;,&quot;3&quot;,
 &quot;Quarterly in Arrears&quot;,&quot;3&quot;,
 &quot;Half yearly in Advance&quot;,&quot;6&quot;,
 &quot;Half yearly in Arrears&quot;,&quot;6&quot;,
 &quot;Yearly in Advance&quot;,&quot;12&quot;,
 &quot;Yearly in Arrears&quot;,&quot;12&quot;,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>