force-app/main/default/objects/Contract/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <description>Formula derived from the Billing Frequency</description>
    <formula>IF(CONTAINS(TEXT(RC_Advance_Payment_Term_SOS__c),&quot;Advance&quot;),&quot;AD&quot;,IF(CONTAINS(TEXT(RC_Advance_Payment_Term_SOS__c),&quot;Arrears&quot;),&quot;AR&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Method</label>
    <type>Text</type>
</CustomField>