force-app/main/default/objects/Contract/fields/Business_Division__c.field-meta.xml
<CustomField>
    <fullName>Business_Division__c</fullName>
    <label>2bDel_Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YISLLP</fullName>
            </value>
            <value>
                <fullName>YNSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>