force-app/main/default/objects/Contract/fields/Contract_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Months__c</fullName>
    <label>Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>