force-app/main/default/objects/Contract/fields/Contract_Tenure_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Years__c</fullName>
    <label>Years</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>