force-app/main/default/objects/Contract/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Contact)</relationshipLabel>
    <relationshipName>Contracts6</relationshipName>
    <type>Lookup</type>
</CustomField>