force-app/main/default/objects/Contract/fields/Customer_Exec_Mgmt_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Exec_Mgmt_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Exec Mgmt Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Exec Mgmt Contact)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>