force-app/main/default/objects/Contract/fields/Customer_Legal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2bDel as per EMAIL Yotta - Contact Deactivation Flow on 22-July</description>
    <label>2bDel_Customer Legal Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Legal Contact)</relationshipLabel>
    <relationshipName>Contracts5</relationshipName>
    <type>Lookup</type>
</CustomField>