force-app/main/default/objects/Contract/fields/Customer_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Date__c</fullName>
    <description>Customer Purchase Order Date</description>
    <label>Customer PO Issued Date</label>
    <type>Date</type>
</CustomField>