force-app/main/default/objects/Contract/fields/Customer_Tech_SPOC__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tech_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Tech SPOC</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Support_To_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Tech SPOC)</relationshipLabel>
    <relationshipName>CustTechSPOC</relationshipName>
    <type>Lookup</type>
</CustomField>