force-app/main/default/objects/Contract/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>