force-app/main/default/objects/Contract/fields/Existing_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Existing_Billing_Address__c</fullName>
    <label>Existing Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>