force-app/main/default/objects/Contract/fields/External_Remarks__c.field-meta.xml
<CustomField>
    <fullName>External_Remarks__c</fullName>
    <label>External Remarks</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>