force-app/main/default/objects/Contract/fields/Finalized_Contract_Dates__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Contract_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalized Contract Dates?</label>
    <type>Checkbox</type>
</CustomField>