force-app/main/default/objects/Contract/fields/Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Id_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Id 18 Char</label>
    <type>Text</type>
</CustomField>