force-app/main/default/objects/Contract/fields/Installation_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Installation_Commissioning__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Installation &amp; Commissioning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>