force-app/main/default/objects/Contract/fields/Internal_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Internal_Remarks__c</fullName>
    <label>Internal Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>