force-app/main/default/objects/Contract/fields/Intimation_of_Readiness_of_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Intimation_of_Readiness_of_Dispatch__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Intimation of Readiness of Dispatch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>