force-app/main/default/objects/Contract/fields/Is_Advance_Payment_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Advance_Payment_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Advance Payment Uploaded?</label>
    <type>Checkbox</type>
</CustomField>