force-app/main/default/objects/Contract/fields/Is_PO_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_PO_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PO Uploaded?</label>
    <type>Checkbox</type>
</CustomField>