force-app/main/default/objects/Contract/fields/Is_Ready_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Integration__c</fullName>
    <description>Created by NandishTrigger point for Integration</description>
    <formula>AND(
	OR(
		ISPICKVAL( Status ,&apos;Approved&apos;),
		ISPICKVAL( Status ,&apos;Activated&apos;),
		ISPICKVAL( Status ,&apos;Expired&apos;),
		ISPICKVAL( Status ,&apos;Deactivated&apos;)

		),
		NOT(ISPICKVAL( Status, &apos;Renewed&apos;))
	)</formula>
    <inlineHelpText>DO NOT ADD TO LAYOUT</inlineHelpText>
    <label>Is Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>