force-app/main/default/objects/Contract/fields/Is_Ready_for_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Sync__c</fullName>
    <formula>ISBLANK(Last_Sync_Date__c) || LastModifiedDate &gt;  Last_Sync_Date__c</formula>
    <label>Is Ready for Sync</label>
    <type>Checkbox</type>
</CustomField>