force-app/main/default/objects/Contract/fields/Is_Signed_Contract_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Signed_Contract_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating Signed Contract document is uploaded and not approved</description>
    <label>Is Signed Contract Uploaded?</label>
    <type>Checkbox</type>
</CustomField>