force-app/main/default/objects/Contract/fields/Is_SOF_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_SOF_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating Contract signed SOF is approved and subsequent approvals will be for SCF</description>
    <label>Is SOF Approved?</label>
    <type>Checkbox</type>
</CustomField>