force-app/main/default/objects/Contract/fields/Is_SOF_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_SOF_Signed__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>OMT Field</description>
    <label>Is SOF Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>