force-app/main/default/objects/Contract/fields/Last_Quote__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Last Quote)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>