force-app/main/default/objects/Contract/fields/Last_SCF_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SCF_Date__c</fullName>
    <label>Last SCF Date</label>
    <type>Date</type>
</CustomField>