force-app/main/default/objects/Contract/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Last Sync Date / Last SCF Date</label>
    <type>DateTime</type>
</CustomField>