force-app/main/default/objects/Contract/fields/Lastest_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Lastest_Quote_Type__c</fullName>
    <formula>TEXT( Last_Quote__r.SBQQ__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Quote Type</label>
    <type>Text</type>
</CustomField>