force-app/main/default/objects/Contract/fields/Manual_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Manual_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Renewal</label>
    <type>Checkbox</type>
</CustomField>