force-app/main/default/objects/Contract/fields/Manual_Renewal_Updated_by_OMT__c.field-meta.xml
<CustomField>
    <fullName>Manual_Renewal_Updated_by_OMT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Renewal Updated by OMT</label>
    <type>Checkbox</type>
</CustomField>