force-app/main/default/objects/Contract/fields/Mode_of_Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Advance_Payment__c</fullName>
    <label>Mode of Advance Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>