force-app/main/default/objects/Contract/fields/MSA_Received__c.field-meta.xml
<CustomField>
    <fullName>MSA_Received__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>OMT Field</description>
    <label>MSA Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>