force-app/main/default/objects/Contract/fields/New_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Billing Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contracts (New Billing Address)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>