force-app/main/default/objects/Contract/fields/Number_Of_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Subscription__c</fullName>
    <label>Number Of Subscription</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>