force-app/main/default/objects/Contract/fields/OMT_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>OMT_Approval_Status__c</fullName>
    <label>OMT Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not-Submitted</fullName>
                <default>true</default>
                <label>Not-Submitted</label>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>