force-app/main/default/objects/Contract/fields/OMT_Remarks__c.field-meta.xml
<CustomField>
    <fullName>OMT_Remarks__c</fullName>
    <description>OMT Field</description>
    <label>OMT Remarks</label>
    <type>TextArea</type>
</CustomField>